# discord-rs

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: deploy.yaml
src/: main.rs
src/commands/: clear.rs  mod.rs  ping.rs
src/libs/: message_processor.rs  mod.rs  redis.rs
src/openai/: request.rs
